[metadata]
description-file = README.md

[tool:pytest]
addopts =
  --cov=tune
  --cov=tune_tensorflow
  --cov-report=term-missing:skip-covered
  -vvv

[flake8]
ignore = E24,E203,W503,C408,A003,W504,C407,C405
max-line-length = 88
format = pylint
exclude = .svc,CVS,.bzr,.hg,.git,__pycache__,venv,tests/*,docs/*
max-complexity = 10
